@@ -1,3 +1,11 @@
+2012-12-06  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>
+
+	Test implementation of SQL with parameters.
+
+	* R/PostgreSQLSupport.R
+	* src/RS-pgsql-pqexecparams.c
+	* tests/dbGetQueryParams.R
+
 2012-10-04  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>
 
 	Bug fix for GC related errro as reported as issue 42.
